feat(039-authoritative-authored-note-references): property index points to authored references
Replace note_property_index.target_note_id with authored_note_reference_id,
rebuild the index from source-owned rows after backfill, and fix refresh ordering
when replaceContent leaves new authored-reference children transient.

Co-authored-by: Cursor <cursoragent@cursor.com>