@@ -20,7 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 @SpringBootTest
 @ActiveProfiles("test")
 @Transactional
-class NotePropertyIndexWikiLinkTargetTest {
+class NotePropertyIndexAuthoredReferenceTest {
 
   @Autowired MakeMe makeMe;
   @Autowired NotePropertyIndexService notePropertyIndexService;
@@ -31,35 +31,31 @@ class NotePropertyIndexWikiLinkTargetTest {
   }
 
   @Test
-  void stores_target_note_id_when_property_value_is_a_resolvable_wiki_link() {
+  void stores_authored_reference_when_property_value_is_a_wiki_link() {
     User user = makeMe.aUser().please();
     Note existing = makeMe.aNote().title("Existing").notebookOwnedBy(user).please();
-    Note note =
-        makeMe
-            .aNote()
-            .underSameNotebookAs(existing)
-            .content("---\nexample of: \"[[Existing]]\"\n---\n")
-            .please();
+    Note note = makeMe.aNote().underSameNotebookAs(existing).please();
+    makeMe.authorReferencingContent(note, "---\nexample of: \"[[Existing]]\"\n---\n");
 
     notePropertyIndexService.refreshForNote(note);
 
     NotePropertyIndex row = propertyRows(note).getFirst();
     assertThat(row.getPropertyKey(), equalTo("example of"));
-    assertThat(row.getTargetNote().getId(), equalTo(existing.getId()));
+    assertThat(row.getAuthoredNoteReference().getAuthoredLink(), equalTo("Existing"));
   }
 
   @Test
-  void stores_null_target_when_property_value_is_not_a_wiki_link() {
+  void stores_null_reference_when_property_value_is_not_a_wiki_link() {
     User user = makeMe.aUser().please();
     Note note = makeMe.aNote().notebookOwnedBy(user).content("---\ntopic: physics\n---\n").please();
 
     notePropertyIndexService.refreshForNote(note);
 
-    assertThat(propertyRows(note).getFirst().getTargetNote(), nullValue());
+    assertThat(propertyRows(note).getFirst().getAuthoredNoteReference(), nullValue());
   }
 
   @Test
-  void indexes_non_empty_list_without_resolved_targets_as_one_null_target_row() {
+  void indexes_non_empty_list_without_wiki_links_as_one_null_reference_row() {
     User user = makeMe.aUser().please();
     String markdown =
         "---\n" + "topic:\n" + "  - alpha\n" + "  - beta\n" + "  - gamma\n" + "---\n\nbody";
@@ -71,14 +67,13 @@ class NotePropertyIndexWikiLinkTargetTest {
     assertThat(rows, hasSize(1));
     assertThat(rows.getFirst().getPropertyKey(), equalTo("topic"));
     assertThat(rows.getFirst().getItemIndex(), equalTo(0));
-    assertThat(rows.getFirst().getTargetNote(), nullValue());
+    assertThat(rows.getFirst().getAuthoredNoteReference(), nullValue());
   }
 
   @Test
-  void indexes_list_with_mixed_link_and_non_link_items_only_for_resolved_targets() {
+  void indexes_list_with_mixed_link_and_non_link_items_only_for_wiki_linked_items() {
     User user = makeMe.aUser().please();
     Note targetA = makeMe.aNote().title("A").notebookOwnedBy(user).please();
-    Note targetC = makeMe.aNote().title("C").underSameNotebookAs(targetA).please();
     String markdown =
         "---\n"
             + "example of:\n"
@@ -86,35 +81,34 @@ class NotePropertyIndexWikiLinkTargetTest {
             + "  - plain text\n"
             + "  - \"[[C]]\"\n"
             + "---\n\nbody";
-    Note note = makeMe.aNote().underSameNotebookAs(targetA).content(markdown).please();
+    Note note = makeMe.aNote().underSameNotebookAs(targetA).please();
+    makeMe.authorReferencingContent(note, markdown);
 
     notePropertyIndexService.refreshForNote(note);
 
     List<NotePropertyIndex> rows = propertyRows(note);
     assertThat(rows, hasSize(2));
     assertThat(rows.get(0).getItemIndex(), equalTo(0));
-    assertThat(rows.get(0).getTargetNote().getId(), equalTo(targetA.getId()));
+    assertThat(rows.get(0).getAuthoredNoteReference().getAuthoredLink(), equalTo("A"));
     assertThat(rows.get(1).getItemIndex(), equalTo(2));
-    assertThat(rows.get(1).getTargetNote().getId(), equalTo(targetC.getId()));
+    assertThat(rows.get(1).getAuthoredNoteReference().getAuthoredLink(), equalTo("C"));
   }
 
   @Test
-  void stores_null_target_when_wiki_link_does_not_resolve() {
+  void stores_authored_reference_even_when_wiki_link_does_not_resolve_to_an_existing_note() {
     User user = makeMe.aUser().please();
-    Note note =
-        makeMe
-            .aNote()
-            .notebookOwnedBy(user)
-            .content("---\nexample of: \"[[Missing]]\"\n---\n")
-            .please();
+    Note note = makeMe.aNote().notebookOwnedBy(user).please();
+    makeMe.authorReferencingContent(note, "---\nexample of: \"[[Missing]]\"\n---\n");
 
     notePropertyIndexService.refreshForNote(note);
 
-    assertThat(propertyRows(note).getFirst().getTargetNote(), nullValue());
+    assertThat(
+        propertyRows(note).getFirst().getAuthoredNoteReference().getAuthoredLink(),
+        equalTo("Missing"));
   }
 
   @Test
-  void collapses_unresolved_list_wiki_links_to_one_null_target_row() {
+  void indexes_each_authored_wiki_link_in_a_list_regardless_of_whether_it_resolves() {
     User user = makeMe.aUser().please();
     String markdown =
         "---\n"
@@ -122,13 +116,16 @@ class NotePropertyIndexWikiLinkTargetTest {
             + "  - \"[[Missing]]\"\n"
             + "  - \"[[AlsoMissing]]\"\n"
             + "---\n\nbody";
-    Note note = makeMe.aNote().notebookOwnedBy(user).content(markdown).please();
+    Note note = makeMe.aNote().notebookOwnedBy(user).please();
+    makeMe.authorReferencingContent(note, markdown);
 
     notePropertyIndexService.refreshForNote(note);
 
     List<NotePropertyIndex> rows = propertyRows(note);
-    assertThat(rows, hasSize(1));
-    assertThat(rows.getFirst().getItemIndex(), equalTo(0));
-    assertThat(rows.getFirst().getTargetNote(), nullValue());
+    assertThat(rows, hasSize(2));
+    assertThat(rows.get(0).getItemIndex(), equalTo(0));
+    assertThat(rows.get(0).getAuthoredNoteReference().getAuthoredLink(), equalTo("Missing"));
+    assertThat(rows.get(1).getItemIndex(), equalTo(1));
+    assertThat(rows.get(1).getAuthoredNoteReference().getAuthoredLink(), equalTo("AlsoMissing"));
   }
 }
